# rust-aaf

./: Cargo.toml  README.md
AAF-refimpl/: AAFMetaDictionary.h  tool.py
src/: .main.rs.rustfmt  file.rs  header.rs  interchange_object.rs  main.rs  meta.rs  object_iterator.rs  properties.rs  property_iterator.rs  session.rs  types.rs
src/aaf/: classes.rs  file4k.rs  mod.rs  object.rs
testmedia/AAF_Test_1/: AAF_Test_1.aaf  AAF_Test_1_Embedded.aaf
testmedia/AAF_Test_1/AAF_Test_1 Audio Files/: msmFMID.pmr
