[package]
name = "rust-aaf"
version = "0.0.1"
edition = "2021"
author = "Jamie Hardt <jamiehardt@gmail.com>"
description = "Rust implementation of the Advanced Authoring Format"
readme = "README.md"
repository = "https://github.com/iluvcapra/rust-aaf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfb = "0.6.1"
byteorder = "1.4.3"
uuid = "0.8.2"
encoding = "0.2.33"

